# Madelbrot-Set-Cpp

./: CMakeLists.txt  README.md  a.out  main.cpp
src/: fractal.cpp  fractal.h  main.cpp  renderer.cpp  renderer.h
